--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,7 +99,7 @@ body {
         z-index: 1000;
     }
    .pred-body{
-      background-color: #E07E1B;
+      background-color: #1E88E5;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
