--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/static/img/email.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/email.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <!-- Fontawesome CSS -->
@@ -46,7 +46,7 @@
     <section class="fxt-template-animation fxt-template-layout32">
         <div class="fxt-content-wrap">
             <a style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#logIn" class="fxt-logo">
-                <img src="/static/img/email.svg" alt="Email" width="40">
+                <img src="/static/img/email.png" alt="Email" width="40">
             </a>
             <h1 class="fxt-main-title">Login and Register</h1>
             <p class="fxt-main-description">Click the button below to Login or Get Registered!</p>
