--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/static/img/email.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/email.svg">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <!-- Fontawesome CSS -->
