--- a/static/css/dasboard.css
+++ b/static/css/dasboard.css
@@ -7,7 +7,7 @@ body {
     top: 0;
     height: 100%;
     width: 250px;
-    background-color: darkorange;
+    background-color: skyblue;
     transition: 0.3s;
     z-index: 1000;
     padding-top: 60px;
@@ -22,7 +22,7 @@ body {
     transform: translateY(-50%);
     width: 40px;
     height: 60px;
-    background: linear-gradient(135deg, darkorange, white);
+    background: linear-gradient(135deg, skyblue, white);
     display: flex;
     align-items: center;
     justify-content: center;
