--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> 
     <link rel="stylesheet" href="/static/css/dasboard.css"> 
-    <link rel="shortcut icon" type="image/x-icon" href="/static/img/jum.jpg">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/email.png">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <!-- Sidebar -->
 <div class="sidebar">
     <div class="logo">
-        <img src="/static/img/jumiaa.png" alt="" width="100">
+        <img src="/static/img/email.png" alt="" width="120">
     </div>
     <div class="list-group list-group-flush">
         <a href="{{ url_for('dashboard') }}" class="list-group-item list-group-item-action">
